--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
-import Navigation from '../components/navigation.astro';
+import Navigation from '../components/Navigation.astro';
 import Home from '../components/Home.astro';
 import About from '../components/About.astro';
 import Contact from '../components/Contact.astro';
